# featherpdf-win

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pdf.rs  print.rs
src/lib/: ipc.ts  recent.ts  tabs.svelte.ts
src/lib/components/: OutlinePanel.svelte  PageView.svelte  PrintDialog.svelte  ShortcutsDialog.svelte  ThumbnailPanel.svelte  Viewer.svelte
