[package]
name = "feather-pdf"
version = "0.1.0"
description = "Pembaca PDF native yang ringan & sat-set"
authors = ["sarta"]
edition = "2021"
license = "MIT"

[lib]
# Suffix `_lib` agar nama lib unik & tak bentrok dengan nama bin di Windows.
name = "feather_pdf_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Engine PDF (PDFium via pdfium.dll prebuilt). Default features sudah termasuk
# `image` + `thread_safe`. Lihat memory feather-pdf-overview untuk alasan vs MuPDF.
pdfium-render = "0.9.2"
image = "0.25"

# Cetak via GDI Windows (print-as-image). Hanya di Windows.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Graphics_Printing",
  "Win32_Storage_Xps",
] }
